[gd_scene load_steps=5 format=3 uid="uid://b0jgfy30n61gt"]

[ext_resource type="Script" path="res://Scripts/alquimista.gd" id="1_17u11"]
[ext_resource type="Texture2D" uid="uid://cv3ua4otixn0e" path="res://Assets/icon.svg" id="1_nyn4m"]
[ext_resource type="PackedScene" uid="uid://tqnl75dh036q" path="res://Cenas/Player.tscn" id="2_saby3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17lxm"]
size = Vector2(70, 69)

[node name="Alquimista" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_17u11")
cena_player = ExtResource("2_saby3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -35.5)
shape = SubResource("RectangleShape2D_17lxm")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0.258824, 0.258824, 1)
position = Vector2(0, -35)
scale = Vector2(0.546875, 0.546875)
texture = ExtResource("1_nyn4m")

[node name="Raycast" type="Node2D" parent="."]
position = Vector2(0, -35)

[node name="RayParede" type="RayCast2D" parent="Raycast"]
target_position = Vector2(70, 0)

[node name="RayChao" type="RayCast2D" parent="Raycast"]
position = Vector2(70, 0)
target_position = Vector2(0, 60)

[node name="RayVisao" type="RayCast2D" parent="Raycast"]
target_position = Vector2(700, 0)
collision_mask = 2

[node name="TempoParado" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TempoParado" to="." method="_on_tempo_parado_timeout"]
